Update feature container to have inner div on the standfirst for alignment issues on large viewport

--- a/ArticleTemplates/assets/scss/tones/_tone--feature.scss
+++ b/ArticleTemplates/assets/scss/tones/_tone--feature.scss
@@ -113,7 +113,7 @@
                     margin: 0;
                     width: 100%;
                     
-                    > * {
+                    &__inner {
                         margin-left: 240px;
                         width: 620px;
                     }
